--- a/02 - MongoDB/test_mongo.ipynb
+++ b/02 - MongoDB/test_mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,30 +19,566 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'user': 'Lindsay Thornton', 'user_email': 'alexanderwheeler@example.org', 'user_age': 28, 'post': {'title': 'Random title for Lindsay Thornton', 'content': 'Random content for Lindsay Thornton Pressure employee by above law its not. Way open a such whether cut. Election scientist money role wait serious lot. Sort control man go really quality region.', 'timestamp': datetime.datetime(2001, 12, 22, 13, 33, 57, 415698)}, 'comments': [{'user': 'Kristi Cooley', 'user_email': 'claytoncody@example.org', 'user_age': 39, 'comment': {'text': 'Random text Capital measure anyone provide PM instead few.\\nThan hotel study especially once. Performance eye right president minute admit treat. Before mind would stay role garden.', 'timestamp': datetime.datetime(1998, 7, 21, 12, 59, 7, 588567)}}]}\n",
-      "{'user': 'Lindsay Thornton', 'user_email': 'alexanderwheeler@example.org', 'user_age': 28, 'post': {'title': 'Random title for Lindsay Thornton', 'content': 'Random content for Lindsay Thornton Career real suggest consider present industry. Else pattern leader. Economy course change yes same. Bill record my rise herself spend door.', 'timestamp': datetime.datetime(1992, 5, 3, 2, 1, 29, 34512)}, 'comments': [{'user': 'Beth Mendez', 'user_email': 'carrie93@example.com', 'user_age': 49, 'comment': {'text': 'Random text Foot that early level prevent general century. First including artist everyone discussion.\\nCapital fear deep.', 'timestamp': datetime.datetime(1993, 5, 18, 10, 31, 49, 908240)}}, {'user': 'Michael Smith', 'user_email': 'reneeterry@example.org', 'user_age': 28, 'comment': {'text': 'Random text Establish represent wear. Although everything name interest provide network.\\nForm action off air kid wait. Later summer prove drop. Act enough key they major. He push yet though including.', 'timestamp': datetime.datetime(1999, 4, 22, 1, 36, 43, 442233)}}, {'user': 'Richard Bonilla', 'user_email': 'ginawood@example.org', 'user_age': 18, 'comment': {'text': 'Random text Factor hospital fish believe. Election evening day interview image side movie. On thing sound bit last force indeed. Threat capital soon management.', 'timestamp': datetime.datetime(2017, 1, 4, 0, 22, 16, 976309)}}]}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from itertools import islice\n",
     "import json\n",
     "from datetime import datetime\n",
     "\n",
     "with open ('data.jsonl', 'r') as file:\n",
-    "    for line in islice(file, 2):\n",
+    "    for line in file:\n",
     "        data = json.loads(line)\n",
     "        data['post']['timestamp'] = datetime.fromisoformat(data['post']['timestamp'])\n",
     "        for comment in data['comments']:\n",
     "            comment['comment']['timestamp'] = datetime.fromisoformat(comment['comment']['timestamp'])\n",
     "        posts_collection.insert_one(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'faker'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [57], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mrandom\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mfaker\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Faker\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Create an instance of the Faker class\u001b[39;00m\n\u001b[0;32m      7\u001b[0m fake \u001b[38;5;241m=\u001b[39m Faker()\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'faker'"
+     ]
+    }
+   ],
+   "source": [
+    "#1.1\n",
+    "import json\n",
+    "import random\n",
+    "\n",
+    "from faker import Faker\n",
+    "\n",
+    "# Create an instance of the Faker class\n",
+    "fake = Faker()\n",
+    "\n",
+    "# Define the fields for posts, comments, and user information\n",
+    "post_fields = [\"title\", \"content\"]\n",
+    "comment_fields = [\"text\", \"timestamp\"]\n",
+    "user_fields = [\"name\", \"email\", \"age\"]\n",
+    "\n",
+    "# Generate a list of 5 users with random information\n",
+    "users = []\n",
+    "for i in range(5):\n",
+    "    user = {}\n",
+    "    user[\"name\"] = fake.name()\n",
+    "    user[\"email\"] = fake.email()\n",
+    "    user[\"age\"] = random.randint(18, 60)\n",
+    "    users.append(user)\n",
+    "\n",
+    "# Generate random posts and comments for each user\n",
+    "data = []\n",
+    "for user in users:\n",
+    "    num_posts = random.randint(1, 100)\n",
+    "    for _ in range(num_posts):\n",
+    "        post = {}\n",
+    "        post[\"user\"] = user[\"name\"]\n",
+    "        post[\"user_email\"] = user[\"email\"]\n",
+    "        post[\"user_age\"] = user[\"age\"]\n",
+    "        post[\"post\"] = {}\n",
+    "        post[\"post\"][\"title\"] = f'Random title for {user[\"name\"]}'\n",
+    "        post[\"post\"][\"content\"] = f'Random content for {user[\"name\"]} {fake.text()}'\n",
+    "        post[\"post\"][\"timestamp\"] = fake.date_time().isoformat()\n",
+    "        num_comments = random.randint(0, 5)\n",
+    "        post[\"comments\"] = []\n",
+    "        for _ in range(num_comments):\n",
+    "            comment = {}\n",
+    "            comment[\"user\"] = random.choice(users)[\"name\"]\n",
+    "            comment[\"user_email\"] = random.choice(users)[\"email\"]\n",
+    "            comment[\"user_age\"] = random.choice(users)[\"age\"]\n",
+    "            comment[\"comment\"] = {}\n",
+    "            comment[\"comment\"][\"text\"] = f\"Random text {fake.text()}\"\n",
+    "            comment[\"comment\"][\"timestamp\"] = fake.date_time().isoformat()\n",
+    "            post[\"comments\"].append(comment)\n",
+    "        data.append(post)\n",
+    "\n",
+    "for item in data:\n",
+    "    posts_collection.insert_one(item)\n",
+    "    print(item)\n",
+    "    print('\\n)')\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_age</th>\n",
+       "      <th>user</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Margaret Flores</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>44</td>\n",
+       "      <td>Beth Mendez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32</td>\n",
+       "      <td>Joshua Murray</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>46</td>\n",
+       "      <td>Zachary King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>33</td>\n",
+       "      <td>Catherine Rios</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>33</td>\n",
+       "      <td>Jon Rodriguez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>49</td>\n",
+       "      <td>Timothy Gallegos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>34</td>\n",
+       "      <td>John Griffin</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Lindsay Thornton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Amanda Johnson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>48</td>\n",
+       "      <td>Gary Best</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Mrs. Christine Sawyer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Jeffrey Perez</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Todd Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>46</td>\n",
+       "      <td>Michael Carr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Andrea Kennedy</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>53</td>\n",
+       "      <td>Richard Bonilla</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>51</td>\n",
+       "      <td>Jacob Carroll</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Travis Nicholson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Michael Smith</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Christopher Jenkins</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Debra Smith DDS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>50</td>\n",
+       "      <td>Robert Wood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>29</td>\n",
+       "      <td>Kayla Hill</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    user_age                   user\n",
+       "0         42        Margaret Flores\n",
+       "1         44            Beth Mendez\n",
+       "2         32          Joshua Murray\n",
+       "3         46           Zachary King\n",
+       "4         33         Catherine Rios\n",
+       "5         33          Jon Rodriguez\n",
+       "6         49       Timothy Gallegos\n",
+       "7         34           John Griffin\n",
+       "8         28       Lindsay Thornton\n",
+       "9         30         Amanda Johnson\n",
+       "10        48              Gary Best\n",
+       "11        37  Mrs. Christine Sawyer\n",
+       "12        39          Jeffrey Perez\n",
+       "13        41              Todd Park\n",
+       "14        46           Michael Carr\n",
+       "15        37         Andrea Kennedy\n",
+       "16        53        Richard Bonilla\n",
+       "17        51          Jacob Carroll\n",
+       "18        42       Travis Nicholson\n",
+       "19        28          Michael Smith\n",
+       "20        40    Christopher Jenkins\n",
+       "21        27        Debra Smith DDS\n",
+       "22        50            Robert Wood\n",
+       "23        29             Kayla Hill"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#1.2\n",
+    "#import pandas as pd\n",
+    "# Buscar todos los usuarios mayores a 25\n",
+    "\n",
+    "users = posts_collection.aggregate([\n",
+    "    {\"$match\": {\"user_age\": {\"$gt\": 25}}},\n",
+    "    {\"$group\": {\"_id\": \"$user\", \"user_age\": {\"$first\": \"$user_age\"}}},\n",
+    "    {\"$project\": {\"_id\": 0, \"user\": \"$_id\", \"user_age\": 1}}\n",
+    "])\n",
+    "\n",
+    "\n",
+    "# Convertir el cursor a un DataFrame de pandas\n",
+    "df = pd.DataFrame(list(users))\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('65ecff2f504961bf941a2300'), 'user': 'Joann Bowen', 'user_email': 'tmartin@example.org', 'user_age': 19, 'post': {'title': 'Random title for Joann Bowen', 'content': 'Random content for Joann Bowen Wide take drop. Down goal still phone chance tonight. See stock beat significant right.\\nCommercial eye meet impact risk. Every laugh true leave chair part because.', 'timestamp': datetime.datetime(1978, 9, 14, 0, 1, 17, 95000)}, 'comments': [{'user': 'Joshua Murray', 'user_email': 'tmartin@example.org', 'user_age': 51, 'comment': {'text': 'Random text Forget blue different most drive amount change. Beat successful inside court guess she thank. Image serious report cell federal majority how agent.', 'timestamp': datetime.datetime(1971, 3, 8, 2, 26, 36, 557000)}}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1.3\n",
+    "# Buscar un usuario por direccion de correo\n",
+    "\n",
+    "user = posts_collection.find_one({\"user_email\": \"tmartin@example.org\"})\n",
+    "# Imprimir el resultado\n",
+    "print(user)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#4.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#5.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#6.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#6.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#6.3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#6.4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7.1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7.2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#7.3"
    ]
   }
  ],
@@ -62,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
