--- a/02 - MongoDB/test_mongo.ipynb
+++ b/02 - MongoDB/test_mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -249,20 +249,77 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>user</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Lindsay Thornton</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Joann Bowen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Will Bowen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Joann Bowen</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Kayla Hill</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>214</th>\n",
+       "      <td>Travis Nicholson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>215</th>\n",
+       "      <td>Travis Nicholson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>216</th>\n",
+       "      <td>Travis Nicholson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>217</th>\n",
+       "      <td>Travis Nicholson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>218</th>\n",
+       "      <td>Pablito</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>219 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "                 user\n",
+       "0    Lindsay Thornton\n",
+       "1         Joann Bowen\n",
+       "2          Will Bowen\n",
+       "3         Joann Bowen\n",
+       "4          Kayla Hill\n",
+       "..                ...\n",
+       "214  Travis Nicholson\n",
+       "215  Travis Nicholson\n",
+       "216  Travis Nicholson\n",
+       "217  Travis Nicholson\n",
+       "218           Pablito\n",
+       "\n",
+       "[219 rows x 1 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,10 +330,12 @@
     "import pandas as pd\n",
     "\n",
     "users = posts_collection.aggregate([\n",
-    "    {\"$unwind\": \"$comments\"},\n",
-    "    {\"$group\": {\"_id\": \"$user\", \"comments\": {\"$sum\": 1}}},\n",
-    "    {\"$match\": {\"comments\": 0}},\n",
-    "    {\"$project\": {\"_id\": 0, \"user\": \"$_id\"}}\n",
+    "    {\"$project\": {\n",
+    "        \"user\": 1,\n",
+    "        \"comments_count\": {\"$size\": \"$comments\"}\n",
+    "    }},\n",
+    "    {\"$match\": {\"comments_count\": 0}},\n",
+    "    {\"$project\": {\"_id\": 0, \"user\": 1}}\n",
     "])\n",
     "\n",
     "# Convertir el cursor a un DataFrame de pandas\n",
@@ -343,7 +402,9 @@
     "#3.2\n",
     "\n",
     "# Recuperar solo el nombre de usuario y la edad del usuario de todos los documentos. (Proyección\n",
-    "users = posts_collection.find({}, {\"user\": 1, \"user_age\": 1, \"_id\": 0})\n",
+    "users = posts_collection.aggregate([\n",
+    "    {\"$group\": {\"_id\": \"$user\", \"user_age\": {\"$first\": \"$user_age\"}}},\n",
+    "    {\"$project\": {\"_id\": 0, \"user\": \"$_id\", \"user_age\": 1}}])\n",
     "df = pd.DataFrame(list(users))\n",
     "df"
    ]
