ultimos dos querys

--- a/02 - MongoDB/test_mongo.ipynb
+++ b/02 - MongoDB/test_mongo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,8 +714,8 @@
     "posts_collection.find({\"user_age\": {\"$gt\": 30}}).explain()\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
+    "# El plan de consulta para encontrar usuarios con edad mayor a 30 implica una búsqueda en el índice creado en el campo \"user_age\" con un límite superior de 30.\n",
+    "# El motor de MongoDB utilizará el índice para buscar los documentos que cumplan con el criterio de búsqueda y devolverá los resultados.\n",
     "\n"
    ]
   },
@@ -725,7 +725,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#7.3"
+    "#7.3\n",
+    "\n",
+    "# Discutir las ventajas y desventajas de almacenar comentarios dentro del documento de usuario.\n",
+    "\n",
+    "# Ventajas:\n",
+    "\n",
+    "\n",
+    "# Los comentarios pueden ser obtenidos rápidamente al mismo tiempo que la publicación del usuario.\n",
+    "# No se necesita una consulta adicional para obtener los comentarios de un usuario.\n",
+    "# Los comentarios pueden ser indexados junto con la publicación del usuario, facilitando búsquedas más eficientes.\n",
+    "\n",
+    "\n",
+    "# Desventajas:\n",
+    "\n",
+    "# Si un usuario genera numerosos comentarios, el tamaño del documento puede aumentar considerablemente.\n",
+    "# Los comentarios no pueden ser recuperados de manera independiente de los documentos de usuario.\n",
+    "# Si los comentarios son actualizados con frecuencia, pueden surgir problemas de concurrencia al escribir en el documento de usuario.\n"
    ]
   }
  ],
@@ -745,7 +761,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
