--- a/02 - MongoDB/Quiz #2 Javier Julian Kendell Carlos.ipynb
+++ b/02 - MongoDB/Quiz #2 Javier Julian Kendell Carlos.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Quiz #2 - MongoDB Javier Rojas, Julian Lopez, Kendell Garbanzo, Carlos Venegas.\n",
+    "\n",
     "from pymongo import MongoClient\n",
     "\n",
     "client = MongoClient('localhost', 27017, username='root', password='example')\n",
